--- a/.travis.yml
+++ b/.travis.yml
@@ -77,19 +77,24 @@ deploy:
   api_key: "${API_KEY}"
   # files to copy to github release
   file:
-    - "dist/yakyak-${YAKYAK_VERSION}-linux-x64.tar.gz"
-    - "dist/yakyak-${YAKYAK_VERSION}-linux-x86_64-pacman.tar.gz"
-    - "dist/yakyak-${YAKYAK_VERSION}-linux-ia32-pacman.tar.gz"
-    - "dist/yakyak-${YAKYAK_VERSION}-linux-ia32.tar.gz"
-    - "dist/yakyak-${YAKYAK_VERSION}-win32-ia32.zip"
-    - "dist/yakyak-${YAKYAK_VERSION}-win32-x64.zip"
     - "dist/yakyak-${YAKYAK_VERSION}-osx.zip"
-      #- "dist/com.github.yakyak.YakYak_master_x64.flatpak"
-      #- "dist/com.github.yakyak.YakYak_master_ia32.flatpak"
+#
+    - "dist/yakyak-${YAKYAK_VERSION}-linux-x64.tar.gz"
+    - "dist/yakyak-${YAKYAK_VERSION}-linux-x64.rpm"
     - "dist/yakyak-${YAKYAK_VERSION}-linux-amd64.deb"
+    - "dist/yakyak-${YAKYAK_VERSION}-linux-x64-pacman.tar.gz"
+#
+    - "dist/yakyak-${YAKYAK_VERSION}-win32-x64.zip"
+#
+    - "dist/yakyak-${YAKYAK_VERSION}-linux-ia32.tar.gz"
     - "dist/yakyak-${YAKYAK_VERSION}-linux-i386.deb"
-    - "dist/yakyak-${YAKYAK_VERSION}-linux-i386.rpm"
-    - "dist/yakyak-${YAKYAK_VERSION}-linux-x86_64.rpm"
+    - "dist/yakyak-${YAKYAK_VERSION}-linux-ia32.rpm"
+    - "dist/yakyak-${YAKYAK_VERSION}-linux-ia32-pacman.tar.gz"
+#
+    - "dist/yakyak-${YAKYAK_VERSION}-win32-ia32.zip"
+#
+#    - "dist/com.github.yakyak.YakYak_master_x64.flatpak"
+#    - "dist/com.github.yakyak.YakYak_master_ia32.flatpak"
   # only trigger on tags
   on:
     tags: true
