--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "coffeescript": "^1.9.3",
     "devtron": "^1.4.0",
     "electron": "^9.0.5",
+    "electron-installer-debian": "^3.1.0",
     "electron-packager": "^15.0.0",
     "gulp": "^4.0.2",
     "gulp-changed": "^4.0.2",
