--- a/src/locales/en.json.template
+++ b/src/locales/en.json.template
@@ -146,6 +146,7 @@
                 "default": "Original",
                 "blue": "Blue",
                 "dark": "Dark",
+                "darker": "Darker",
                 "material": "Material",
                 "pop": "Pop",
                 "gruvy": "Gruvy"
