removes deprecated packages and update electron to v11

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "auto-launch": "^5.0.5",
     "autosize": "^4.0.2",
     "bog": "^1.0.0",
+    "got": "^11.8.0",
     "hangupsjs": "github:yakyak/hangupsjs#coffeescriptv2",
     "i18n": "^0.11.0",
     "mime-types": "^2.1.27",
@@ -68,7 +69,6 @@
     "node-notifier": "^7.0.2",
     "notr": "^1.1.2",
     "q": "^1.5.1",
-    "request": "^2.88.2",
     "snyk": "^1.425.4",
     "tmp": "^0.2.1",
     "trifl": "0.0.10",
@@ -81,8 +81,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "coffeescript": "^2.5.1",
-    "devtron": "^1.4.0",
-    "electron": "^9.1.0",
+    "electron": "^11.0.3",
     "electron-packager": "^15.0.0",
     "gulp": "^4.0.2",
     "gulp-changed": "^4.0.2",
@@ -90,10 +89,10 @@
     "gulp-concat": "^2.6.0",
     "gulp-filter": "^6.0.0",
     "gulp-gzip": "^1.4.2",
-    "gulp-install": "^1.1.0",
     "gulp-less": "^4.0.1",
     "gulp-livereload": "4.0.2",
     "gulp-print": "^5.0.2",
+    "gulp-reinstall": "^0.2.0",
     "gulp-rename": "^2.0.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-spawn": "^0.4.5",
