--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "deploy:win32-x64": "gulp deploy:win32-x64",
     "deploy:win32-ia32": "gulp deploy:win32-ia32",
     "deploy:darwin-x64": "gulp deploy:darwin-x64",
+    "deploy:darwin-arm64": "gulp deploy:darwin-arm64",
     "snyk-protect": "snyk protect"
   },
   "repository": {
