--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "electron-installer-debian": "^3.1.0",
     "electron-installer-flatpak": "^0.6.0",
     "got": "^11.8.0",
-    "hangupsjs": "github:yakyak/hangupsjs#coffeescriptv2",
+    "hangupsjs": "yakyak/hangupsjs",
     "i18n": "^0.13.2",
     "mime-types": "^2.1.27",
     "moment": "^2.28.0",
@@ -85,7 +85,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "coffeescript": "^2.5.1",
-    "electron": "^11.0.3",
+    "electron": "^11.1.1",
     "electron-packager": "^15.1.0",
     "gulp": "^4.0.2",
     "gulp-changed": "^4.0.2",
