--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "electron-installer-debian": "^3.1.0",
     "electron-installer-flatpak": "^0.6.0",
     "got": "^11.8.0",
-    "hangupsjs": "github:yakyak/hangupsjs#coffeescriptv2",
+    "hangupsjs": "github:yakyak/hangupsjs#v1.5-stable",
     "i18n": "^0.13.2",
     "mime-types": "^2.1.27",
     "moment": "^2.28.0",
