--- a/package.json
+++ b/package.json
@@ -60,11 +60,11 @@
     ]
   },
   "dependencies": {
+    "@malept/electron-installer-flatpak": "^0.11.2",
     "auto-launch": "^5.0.5",
     "autosize": "^4.0.2",
     "bog": "^1.0.0",
     "electron-installer-debian": "^3.1.0",
-    "electron-installer-flatpak": "^0.8.0",
     "got": "^11.8.1",
     "hangupsjs": "yakyak/hangupsjs",
     "i18n": "^0.13.2",
@@ -79,8 +79,8 @@
     "uber-url-regex": "^5.0.9"
   },
   "optionalDependencies": {
-    "electron-installer-debian": "^3.1.0",
-    "electron-installer-flatpak": "^0.8.0"
+    "@malept/electron-installer-flatpak": "^0.11.2",
+    "electron-installer-debian": "^3.1.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
