--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ before_deploy:
   - export YAKYAK_VERSION=`node -e "console.log(require('./package.json').version);"`
   # debug information for the electron packager
   - export DEBUG=electron-packager
+  # branch
+  - export BRANCH=`git rev-parse --abbrev-ref HEAD`
   # allows to have wine with 32-bits
   - sudo dpkg --add-architecture i386
   - sudo apt-get -qq update
@@ -51,20 +53,18 @@ before_deploy:
   # Flatpak
   # install flatpak dependencies
   #
-  ## Commented out as it is not working
-  ##
-  #- sudo add-apt-repository ppa:alexlarsson/flatpak -y
-  #- sudo apt-get update -qq
-  #- sudo apt-get install flatpak-builder flatpak -qq
-  #- flatpak --user remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
+  - sudo add-apt-repository ppa:alexlarsson/flatpak -y
+  - sudo apt-get update -qq
+  - sudo apt-get install flatpak-builder flatpak -qq
+  - flatpak --user remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
   ## 64-bits
-  #- flatpak --user install flathub org.freedesktop.Sdk/x86_64/1.6
-  #- flatpak --user install flathub org.freedesktop.Platform/x86_64/1.6
+  - flatpak --user install flathub org.freedesktop.Sdk/x86_64/18.09
+  - flatpak --user install flathub org.freedesktop.Platform/x86_64/18.09
   ## 32-bits
   #- flatpak --user install flathub org.freedesktop.Sdk/i386/1.6
   #- flatpak --user install flathub org.freedesktop.Platform/i386/1.6
   #
-  #- npm run -loglevel ${NPM_DEBUG_LEVEL} gulp deploy:linux-x64:flatpak:nodep
+  - npm run -loglevel ${NPM_DEBUG_LEVEL} gulp deploy:linux-x64:flatpak:nodep
   #- npm run -loglevel ${NPM_DEBUG_LEVEL} gulp deploy:linux-ia32:flatpak:nodep
 
 deploy:
@@ -96,7 +96,7 @@ deploy:
 #
     - "dist/yakyak-${YAKYAK_VERSION}-win32-ia32.zip"
 #
-#    - "dist/com.github.yakyak.YakYak_master_x64.flatpak"
+    - "dist/com.github.yakyak.YakYak_${BRANCH}_x64.flatpak"
 #    - "dist/com.github.yakyak.YakYak_master_ia32.flatpak"
   # only trigger on tags
   on:
