--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "bog": "^1.0.0",
     "electron-installer-debian": "^3.1.0",
     "got": "^11.8.1",
-    "hangupsjs": "yakyak/hangupsjs",
+    "hangupsjs": "github:yakyak/hangupsjs",
     "i18n": "^0.13.2",
     "mime-types": "^2.1.28",
     "moment": "^2.28.0",
