--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yakyak",
-  "version": "1.5.11.2",
+  "version": "1.5.11.3",
   "description": "Chat client for Google Hangouts",
   "main": "main.js",
   "scripts": {
@@ -66,7 +66,7 @@
     "electron-installer-debian": "^3.1.0",
     "electron-installer-flatpak": "^0.6.0",
     "got": "^11.8.0",
-    "hangupsjs": "github:yakyak/hangupsjs#v1.5-stable",
+    "hangupsjs": "github:yakyak/hangupsjs#stable",
     "i18n": "^0.13.2",
     "mime-types": "^2.1.27",
     "moment": "^2.28.0",
